remove some animations and additional changes

--- a/app/globals.css
+++ b/app/globals.css
@@ -32,7 +32,7 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground font-roboto;
   }
   h1,
   h2,
@@ -40,7 +40,9 @@
   h4,
   h5,
   h6 {
-    @apply font-serif;
+    @apply font-serif font-bold;
+  }
+  p {
+    @apply font-roboto;
   }
 }
-
